--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,53 @@
+# ========================
+# Application Configuration
+# ========================
 PORT=3000
+NODE_ENV=development
+
+# ========================
+# Database Configuration
+# ========================
+# MongoDB (choose one)
+# Production (Atlas)
 # MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.example.mongodb.net/task_queue_db?retryWrites=true&w=majority
+
+# Local Development
 MONGODB_URI=mongodb://localhost:27017/TQS
 
-RATE_LIMIT=5      # Max 5 tasks per minute
-RATE_LIMIT_WINDOW=60  # Window in seconds (60s = 1 minute)
+# ========================
+# Queue Rate Limiting
+# ========================
+# Maximum jobs processed per duration window
+QUEUE_RATE_LIMIT=5
+
+# Rate limit window in seconds (default: 60s)
+QUEUE_RATE_LIMIT_WINDOW=60
+
+# ========================
+# Queue Job Retry Configuration
+# ========================
+# Number of job attempts before failing (default: 3)
+QUEUE_ATTEMPTS=3
+
+# Backoff strategy (exponential|fixed)
+QUEUE_BACKOFF_TYPE=exponential
+
+# Initial backoff delay in milliseconds (default: 1000ms)
+QUEUE_BACKOFF_DELAY=1000
+
+# ========================
+# Redis Configuration
+# ========================
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_TLS=false
+
+# ========================
+# Optional Advanced Settings
+# ========================
+# Queue concurrency (default: CPU cores)
+# QUEUE_CONCURRENCY=4
+
+# Enable job events (true/false)
+# QUEUE_ENABLE_EVENTS=true
