--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "shahid",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": ">=20.11.0"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node --max-old-space-size=1024 dist/main",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
