fix: redis query fixes

--- a/.env.sample
+++ b/.env.sample
@@ -38,10 +38,10 @@ QUEUE_BACKOFF_DELAY=1000
 # ========================
 # Redis Configuration
 # ========================
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_TLS=false
+REDISHOST=localhost
+REDISPORT=6379
+REDISPASSWORD=
+REDIS_TLS=true
 
 # ========================
 # Optional Advanced Settings
