feat: OpenApi Swagger Docs, Unit E2E Tests, Priority Queue

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,8 @@ NODE_ENV=development
 
 # Local Development
 MONGODB_URI=mongodb://localhost:27017/TQS
+PROD_MONGODB_URI=MONGODB_URI=mongodb://mongo:OcVCKzjbJTwjoStQNOglrFwBaHBPpFuv@mongodb.railway.internal:27017/TQS
+
 
 # ========================
 # Queue Rate Limiting
