--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/swagger": "^11.1.1",
     "bull": "^4.16.5",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.13.2",
     "rate-limiter-flexible": "^7.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
